--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,5 +2,7 @@ name: CLXGeyserBandaid
 version: '1.0-SNAPSHOT'
 main: gg.corn.CLXGeyserBandaid.CLXGeyserBandaid
 api-version: '1.21'
+softdepend:
+  - Paper
 depend: [CombatLogX]
 description: Blocks firework rocket flight boosts for players in combat.
