--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: CLXGeyserBandaid
-version: '1.0-SNAPSHOT'
+version: '1.0'
 main: gg.corn.CLXGeyserBandaid.CLXGeyserBandaid
 api-version: '1.21'
 depend:
